prevent dropdown items from overflowing below window

--- a/src/styles/generic/dropdown.module.css
+++ b/src/styles/generic/dropdown.module.css
@@ -76,7 +76,8 @@
     background-color: var(--color0);
     border: 1px solid var(--color2);
     border-top: none;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
     transition:
         opacity var(--transition-param),
         transform var(--transition-param);
